--- a/src/styles/ParkGallery.css
+++ b/src/styles/ParkGallery.css
@@ -105,3 +105,21 @@ button {
 button:hover {
 background-color: #45a049;
 }
+
+.park-number {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    padding: 8px 12px;
+    border-radius: 4px;
+    font-size: 24px;
+    font-weight: bold;
+	background-color:rgba(0, 0, 0, 0.1);
+	height: 100%;
+	width: 100%;
+	padding-top: 100%;
+    z-index: 1;
+}
