--- a/src/styles/ParkGallery.css
+++ b/src/styles/ParkGallery.css
@@ -80,6 +80,7 @@ select:focus {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
     position: relative;
+	z-index:1
 }
 
 .park-card:hover {
