--- a/src/styles/parkcard.css
+++ b/src/styles/parkcard.css
@@ -1,41 +1,15 @@
-/* Hide the default checkbox */
 .collected-park-check input[type="checkbox"] {
-    display: none;
-}
-
-/* Custom checkbox appearance */
-.collected-park-check label {
     width: 24px;
     height: 24px;
-    background-color: #fff;
+	background-color: #fff;
     border: 2px solid #5e5e5e;
     border-radius: 4px;
-    cursor: pointer;
-    position: relative;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    display: inline-block; /* Ensure the label is inline with other elements */
+	transition: background-color 0.3s, border-color 0.3s;
+	cursor: pointer;
 }
 
-/* Custom checkmark when checked */
-.collected-park-check label::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 12px;
-    height: 12px;
-    background-color: #5e5e5e;
-    transform: scale(0) translate(-50%, -50%);
-    border-radius: 2px;
-    transition: transform 0.3s ease;
-}
-
-/* When checkbox is checked, update background and show checkmark */
-.collected-park-check input[type="checkbox"]:checked + label {
+.collected-park-check input[type="checkbox"]:checked {
+	accent-color: #825632;
     background-color: #825632;
     border-color: #825632;
-}
-
-.collected-park-check input[type="checkbox"]:checked + label::after {
-    transform: scale(1) translate(-50%, -50%);
-}
+} 
